--- a/index.html
+++ b/index.html
@@ -601,107 +601,7 @@ I am very interested in flexing my body. That was the reason I chose to join the
 			<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 			Right Section
 			~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-			<div id="main-content" class="side-right col-xs-12 col-lg-offset-6 col-lg-6 vflow">
-
-				<section id="the-company" class="about-us"> <!-- ## Start ABOUT US section ## -->
-					<div class="row">
-						<div class="col-xs-12">
-							<h3>The Rhythm of Change</h3>
-							<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
-						</div>
-					</div>
-				</section> <!-- ## End ABOUT US section ## -->
-
-				<section id="the-gallery" class="portfolio"> <!-- ## Start PORTFOLIO section ## -->
-					<div class="row">
-						<div class="col-xs-12">
-							<h3>What's inside</h3>
-							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-
-							<div class="st-gallery row" itemscope itemtype="http://schema.org/ImageGallery"><!-- %% Start GALLERY %% -->
-								<figure class="col-xs-12 col-sm-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-									<a class="ps-link" href="images/local/stomp-1.jpg" itemprop="contentUrl" data-size="1920x1280">
-										<img class="ofit gpu-hack lazyload" data-src="images/local/stomp-1.jpg" itemprop="thumbnail" alt="Best of both worlds" />
-										<p class="pszoom"></p>
-									</a>
-									<figcaption itemprop="caption description">Best of both worlds</figcaption>
-								</figure>
-								<figure class="col-xs-12 col-sm-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-									<a class="ps-link" href="images/local/stomp-2.jpg" itemprop="contentUrl" data-size="1920x1264">
-										<img class="ofit gpu-hack lazyload" data-src="images/local/stomp-2.jpg" itemprop="thumbnail" alt="Once in a blue moon" />
-										<p class="pszoom"></p>
-									</a>
-									<figcaption itemprop="caption description">Once in a blue moon</figcaption>
-								</figure>
-								<figure class="col-xs-12 col-sm-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-									<a class="ps-link" href="images/local/stomp-3.jpg" itemprop="contentUrl" data-size="1920x1280">
-										<img class="ofit gpu-hack lazyload" data-src="images/local/stomp-3.jpg" itemprop="thumbnail" alt="Piece of cake" />
-										<p class="pszoom"></p>
-									</a>
-									<figcaption itemprop="caption description">Piece of cake</figcaption>
-								</figure>
-								<figure class="col-xs-12 col-sm-6" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-									<a class="ps-link" href="images/local/stomp-4.jpg" itemprop="contentUrl" data-size="1920x1282">
-										<img class="ofit gpu-hack lazyload" data-src="images/local/stomp-4.jpg" itemprop="thumbnail" alt="Whole nine yards" />
-										<p class="pszoom"></p>
-									</a>
-									<figcaption itemprop="caption description">Whole nine yards</figcaption>
-								</figure>
-							</div><!-- %% End GALLERY %% -->
-
-						</div>
-					</div>
-				</section> <!-- ## End PORTFOLIO section ## -->
-
-				<section id="talk-back" class="contact-us"> <!-- ## Start CONTACT US Section ## -->
-					<div class="row">
-						<div class="col-xs-12">
-							<h3>Get In Touch</h3>
-							<p>We are SvenCreations and we are here to serve!<br>How can we help you?</p>
-							<p class="contact-label sven-message"></p>
-							<form id="contact-form" class="row" action="php/contact.php" method="POST"><!-- %% Start CONTACT FORM %% -->
-								<div class="col-xs-12 col-sm-6">
-									<div class="form-group">
-										<input type="text" id="contName" class="form form-control" placeholder="Your Name..." onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Name...'" name="contName" required="">
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-6">
-									<div class="form-group">
-										<input type="email" id="contMail" class="form form-control" placeholder="Your Email..." onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email...'" name="contMail" required="">
-									</div>
-								</div>
-								<div class="col-xs-12">
-									<div class="form-group">
-										<textarea id="contMessage" class="form form-control" placeholder="Your Message..." onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Message...'" name="contMessage" required=""></textarea>
-									</div>
-								</div>
-								<div class="col-xs-12">
-									<div class="form-group">
-										<button type="submit" id="contSubmit" class="st-btn btn-bordered">Send Message</button>
-									</div>
-								</div>
-							</form><!-- %% End CONTACT FORM %% -->
-
-							<div class="addr-details row"><!-- %% Start ADDRESS DETAILS section %% -->
-								<div class="col-xs-12 col-sm-4">
-									<p><span>Address</span><br>370 Concho Dr<br>Gold Canyon,AZ, 85118</p>
-								</div>
-								<div class="col-xs-12 col-sm-4">
-									<p><span>Email</span><br><a href="mailto:svencreations@gmail.com?Subject=Stomp%20Inquiry">svencreations@gmail.com</a></p>
-								</div>
-								<div class="col-xs-12 col-sm-4">
-									<p><span>Phone</span><br><a href="tel:+12025550161">+1 (202) 555-0161</a></p>
-								</div>
-							</div><!-- %% End ADDRESS DETAILS section %% -->
-
-						</div>
-					</div>
-				</section> <!-- ## End CONTACT US section ## -->
-
-				<a id="close-info"><i class="fa fa-window-close" aria-hidden="true"></i></a>
-
-				<p class="copyright text-center">&copy; 2017 STOMP - THE INTRO</p>
-			</div>
+			
 		</div>
 	</div>
 </div>
@@ -711,7 +611,7 @@ Splash page content (If autostart is set to false)
 <div class="splash-page abs-fs vflow bg-cover">
 	<div class="sven-scene halign-center">
 		<div class="centered center-center">
-			<p>Stomp is a typographic intro for your product. Just good rhythm and typography. In the basic version, it contains exactly 100 words.</p>
+			<p>Ram Ram Everyone Click Below To Get Started.</p>
 			<p style="margin-bottom: 0"><a class="st-btn btn-fill play-button">Get Started</a></p>
 		</div>
 	</div>
